deploy: 2364027cae3838186c8009359b3bc57213ac55d8

--- a/search/index.html
+++ b/search/index.html
@@ -6,7 +6,7 @@
 <input type=text id=search-input name=query placeholder=Search class=search-form__input>
 <button class=search-form__button>
 <i class="fas fa-search"></i></button></form></header><ul id=results><li>Search results would be shown here.</li></ul><script>window.store={"https://sergiocarracedo.es/2023-in-a-nutshell/":{title:"2023 in a Nutshell",content:`2023 is over and I did in the last years is time to summarize it. For me, it&rsquo;s always an interesting exercise as I&rsquo;m able to remember the challenges, achievements, and fails in the year and put things in context
-Professional In December 2022 I joined a new company, Nextail, and after a year I think I can review the trip.
+Professional In December 2022 I joined a new company, Nextail, and after a year I think I can review the journey.
 I joined this company as Principal Frontend Engineer, my responsibility and duty was (and is) to identify the improvements needed in the frontend architecture and team organization to improve the delivery and keep growing the app.
 After a couple of hard months, I was able to present a proposal of the technical architecture and team organization to the company board and they gave me the green light.
 The new architecture is focused on simplifying the frontend for the developers and homogenizing the user experience:
