--- a/404.html
+++ b/404.html
@@ -17,53 +17,35 @@ JS
 </span></span><span class=skill style=background-color:#68a063;animation-delay:.9s><span><i class="fab fa-node-js"></i>
 Node.js
 </span></span><span class=skill style=background-color:#41b883;animation-delay:.925s><span>Nuxt.js
-</span></span><span class=skill style=animation-delay:.9500000000000001s><span><i class="fas fa-grip-horizontal"></i>
+</span></span><span class=skill style=animation-delay:.9500000000000001s><span>Vitest
+</span></span><span class=skill style=animation-delay:.9750000000000001s><span>Vite
+</span></span><span class=skill style=animation-delay:1s><span>Clean architectures
+</span></span><span class=skill style=animation-delay:1.0250000000000001s><span><i class="fas fa-grip-horizontal"></i>
 Data Visualization
-</span></span><span class=skill style=animation-delay:.9750000000000001s><span>e-charts
-</span></span><span class=skill style=background-color:#787cb5;color:#fff;animation-delay:1s><span><i class="fab fa-php"></i>
+</span></span><span class=skill style=animation-delay:1.05s><span>e-charts
+</span></span><span class="skill skill--secondary" style=background-color:#787cb5;color:#fff;animation-delay:1.0750000000000002s><span><i class="fab fa-php"></i>
 PHP
-</span></span><span class=skill style=background-color:#333;color:#fff;animation-delay:1.0250000000000001s><span><i class="fab fa-symfony"></i>
+</span></span><span class="skill skill--secondary" style=background-color:#333;color:#fff;animation-delay:1.1s><span><i class="fab fa-symfony"></i>
 Symfony
-</span></span><span class=skill style=background-color:#53b0eb;color:#fff;animation-delay:1.05s><span><i class="fab fa-drupal"></i>
-Drupal
-</span></span><span class="skill skill--secondary" style=background-color:#f99;animation-delay:1.0750000000000002s><span><i class="fab fa-linux"></i>
+</span></span><span class="skill skill--secondary" style=background-color:#f99;animation-delay:1.125s><span><i class="fab fa-linux"></i>
 Linux
-</span></span><span class="skill skill--secondary" style=background-color:#c69;animation-delay:1.1s><span><i class="fab fa-sass"></i>
-Sass
-</span></span><span class="skill skill--secondary" style=animation-delay:1.125s><span><i class="fas fa-sitemap"></i>
+</span></span><span class="skill skill--secondary" style=animation-delay:1.15s><span><i class="fas fa-sitemap"></i>
 k8s
-</span></span><span class="skill skill--secondary" style=animation-delay:1.15s><span><i class="fas fa-tasks"></i>
+</span></span><span class="skill skill--secondary" style=animation-delay:1.175s><span><i class="fas fa-tasks"></i>
 Docker
-</span></span><span class="skill skill--secondary" style=animation-delay:1.175s><span><i class="fas fa-rocket"></i>
+</span></span><span class="skill skill--secondary" style=animation-delay:1.2000000000000002s><span><i class="fas fa-rocket"></i>
 GitHub Actions
-</span></span><span class="skill skill--secondary" style=animation-delay:1.2000000000000002s><span><i class="fas fa-database"></i>
-Postgres
 </span></span><span class="skill skill--secondary" style=animation-delay:1.225s><span><i class="fas fa-database"></i>
+Postgres
+</span></span><span class="skill skill--secondary" style=animation-delay:1.25s><span><i class="fas fa-database"></i>
 MySQL
-</span></span><span class="skill skill--secondary" style=animation-delay:1.25s><span><i class="fab fa-js"></i>
-jQuery
 </span></span><span class="skill skill--secondary" style=animation-delay:1.275s><span><i class="fab fa-css3-alt"></i>
 CSS3
 </span></span><span class="skill skill--secondary" style=animation-delay:1.3s><span><i class="fab fa-html5"></i>
 HTML5
-</span></span><span class="skill skill--secondary" style=animation-delay:1.3250000000000002s><span><i class="fab fa-git"></i>
-Git
-</span></span><span class="skill skill--secondary" style=animation-delay:1.35s><span><i class="fab fa-telegram-plane"></i>
-Deployer
-</span></span><span class="skill skill--secondary" style=animation-delay:1.375s><span><i class="fas fa-server"></i>
-Ansible
-</span></span><span class="skill skill--secondary" style=animation-delay:1.4s><span><i class="fas fa-shopping-cart"></i>
-Prestashop
-</span></span><span class="skill skill--secondary" style=animation-delay:1.425s><span><i class="fas fa-shopping-cart"></i>
-Drupal commerce
-</span></span><span class="skill skill--secondary" style=animation-delay:1.4500000000000002s><span>Electron.js
-</span></span><span class="skill skill--secondary" style=animation-delay:1.475s><span>Open Source
-</span></span><span class="skill skill--secondary" style=animation-delay:1.5s><span><i class="fas fa-chalkboard-teacher"></i>
-Talks
-</span></span><span class="skill skill--secondary" style=animation-delay:1.525s><span><i class="fab fa-less"></i>
-Less
-</span></span><span class="skill skill--secondary" style=animation-delay:1.55s><span><i class="fas fa-grip-horizontal"></i>
-CSS Grid Layout</span></span></aside></div></section><div class=main-content><div class=page-not-found><div class=wrapper-1200><h3>Page not found</h3><div><a href=https://sergiocarracedo.es/ class=btn>Back to home</a></div></div></div></div><footer class="web-footer background-paper-secondary"><div class=wrapper-1200><div class=web-footer__left><div class=me><div class=me__avatar><img alt="Sergio Carracedo" src=/i/sergiocarracedo_hu6caa808ff324b89bfea4b9d7d1c850ee_80590_170x170_fit_q75_box.jpg></div><div class=me__titles><h1>Sergio Carracedo</h1><h2>Senior Fullstack developer.</h2><h3>Always learning, cats, good conversations and small details lover.</h3></div></div></div><div class=web-footer__right><nav role=main class=menu><ul><li class=menu__item><a href=https://sergiocarracedo.es/>Home</a></li><li class=menu__item><a href=https://sergiocarracedo.es/blog>Blog</a></li></ul></nav><div class=social><a class=social__link href=http://www.linkedin.com/in/sergiocarracedo target=_blank title=LinkedIn style=animation-delay:2s><i class="fab fa-linkedin"></i>
+</span></span><span class="skill skill--secondary" style=animation-delay:1.3250000000000002s><span>Open Source
+</span></span><span class="skill skill--secondary" style=animation-delay:1.35s><span><i class="fas fa-chalkboard-teacher"></i>
+Talks</span></span></aside></div></section><div class=main-content><div class=page-not-found><div class=wrapper-1200><h3>Page not found</h3><div><a href=https://sergiocarracedo.es/ class=btn>Back to home</a></div></div></div></div><footer class="web-footer background-paper-secondary"><div class=wrapper-1200><div class=web-footer__left><div class=me><div class=me__avatar><img alt="Sergio Carracedo" src=/i/sergiocarracedo_hu6caa808ff324b89bfea4b9d7d1c850ee_80590_170x170_fit_q75_box.jpg></div><div class=me__titles><h1>Sergio Carracedo</h1><h2>Senior Fullstack developer.</h2><h3>Always learning, cats, good conversations and small details lover.</h3></div></div></div><div class=web-footer__right><nav role=main class=menu><ul><li class=menu__item><a href=https://sergiocarracedo.es/>Home</a></li><li class=menu__item><a href=https://sergiocarracedo.es/blog>Blog</a></li></ul></nav><div class=social><a class=social__link href=http://www.linkedin.com/in/sergiocarracedo target=_blank title=LinkedIn style=animation-delay:2s><i class="fab fa-linkedin"></i>
 </a><a class=social__link href=mailto:hi+blog@sergiocarracedo.es target=_blank title=Email style=animation-delay:1.9333333333333333s><i class="fas fa-envelope"></i>
 </a><a class=social__link href=https://github.com/sergiocarracedo target=_blank title=GitHub style=animation-delay:1.8666666666666667s><i class="fab fa-github"></i>
 </a><a class=social__link href=https://www.drupal.org/u/sergiocarracedo target=_blank title=Drupal style=animation-delay:1.8s><i class="fab fa-drupal"></i>
