deploy: 0a10e8ae4f1bde0081c8f3da86a109921f67e928

--- a/search/index.html
+++ b/search/index.html
@@ -5,9 +5,9 @@
 <input class=search-form__input id=search-input name=query placeholder=Search type=text>
 <button aria-label="Search in the blog" class=search-form__button>
 <i class="fas fa-search"></i></button></form></header><ul id=results><li>Search results would be shown here.</li></ul><script>window.store={"https://sergiocarracedo.es/blog/":{title:"Blog",content:"",url:"https://sergiocarracedo.es/blog/",image:"",tags:[],readingTime:"0 minutes read",date:"Dec 24, 2024"},"https://sergiocarracedo.es/music-covers/":{title:"My favourite music covers",content:`A cover version is a new performance or recording by someone other than the original artist typically with another production style or genre.
-As is Xmas time, this is a cover of &ldquo;Carol of Bells&rdquo; with metal style:
+As is Xmas time, this is a cover of &ldquo;Carol of the Bells&rdquo; with metal style:
 Long time ago, in the Napster epoch, I discovered the covers, specifically punk covers of pop songs. It was a revelation for me, and I started to search for more and more covers. With the time I discovered that there are a lot of covers, not only punk covers, but also metal, rock, and other genres covers of pop songs, and also covers of other songs.
-Before Spotify, Last.fm was my favourite way of hearing music (now last.fm is just the scrobbler but time ago, it was a tag based music player too). I discover more and more covers, and when the Spotify era started, I started to create playlists with my favourite covers.
+Before Spotify, Last.fm was my favourite way of listening music (now last.fm is just the scrobbler but time ago, it was a tag-based music player too). I discover more and more covers, and when the Spotify era started, I started to create playlists with my favourite covers.
 Here are some of my favourite covers playlists, most of them are punk and metal covers of pop songs:
 And this one is one of my latest discoveries, a playlist of LoFi-style covers of &ldquo;famous songs&rdquo; I use a lot to work:
 For me covers world is a rabbit hole, you start with a song you like, and you end with a lot of new songs and artists you never heard before. There are even groups that only do covers, Our Last Night, Northern Kings, etc.
